Made it compile under Java 9